# odroid-powermate

./: .gitignore  CMakeLists.txt  README.md  partitions.csv  sdkconfig  sdkconfig.defaults
cmake/: gen_powermate_bin.cmake
docs/: API.md  custom.md  pin.md  settings.md  uart.md
example/console-frontend/: go.mod  go.sum  main.go  status.proto
example/console-frontend/pb/: status.pb.go
example/logger/: README.md  csv_2_plot.py  logger.py
main/: CMakeLists.txt  Kconfig  idf_component.yml
main/app/: odroid-power-mate.c  odroid-remote-http.c
main/ina226/: ina226.c
main/include/: ina226.h  indicator.h  nconfig.h  system.h  wifi.h
main/indicator/: indicator.c
main/nconfig/: nconfig.c
main/proto/: status.pb.c  status.pb.h
main/service/: auth.c  auth.h  climit.h  control.c  datalog.c  datalog.h  dbg_console.c  dbg_console.h  monitor.c  monitor.h  setting.c  sw.c  sw.h  system.c  webserver.c  webserver.h  ws.c
main/system/: system.c
main/wifi/: ap.c  priv_wifi.h  sta.c  wifi.c  wifi_helper.c
page/: index.html  package-lock.json  package.json  vite.config.js
page/src/: api.js  chart.js  dom.js  events.js  main.js  style.css  terminal.js  ui.js  utils.js  websocket.js
proto/: status.proto
